// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Textarea[Base] should render correctly  1`] = `
<div
  class="c-ejcolv soui-textarea-wrapper cbqsinf soui-textarea-wrapper-focus"
  data-soui-input-border="true"
>
  <textarea
    class="c-gic52x soui-textarea-wrapper-padding-box c6525mi soui-textarea-wrapper-inner-title-bottom c-6oul40 soui-textarea-textarea"
    placeholder="input something"
    rows="4"
  />
</div>
`;

exports[`Textarea[Base] should render correctly about autosize 1`] = `
<div
  class="c-ejcolv soui-textarea-wrapper"
  data-soui-input-border="true"
>
  <textarea
    class="c-gic52x soui-textarea-wrapper-padding-box c6525mi soui-textarea-wrapper-inner-title-bottom c-6oul40 soui-textarea-textarea"
    placeholder="Please enter content, the height can be automatically adjusted"
    rows="2"
    style="overflow: auto; max-height: 150px;"
  />
  <textarea
    class="c-gic52x soui-textarea-wrapper-padding-box c6525mi soui-textarea-wrapper-inner-title-bottom c-6oul40 soui-textarea-textarea ci3tibq soui-textarea-shadow"
    placeholder="Please enter content, the height can be automatically adjusted"
    rows="2"
  />
</div>
`;

exports[`Textarea[Base] should render correctly about footer 1`] = `
<div
  class="c-ejcolv soui-textarea-wrapper"
  data-soui-input-border="true"
>
  <textarea
    class="c-gic52x soui-textarea-wrapper-padding-box c6525mi soui-textarea-wrapper-inner-title-bottom c-6oul40 soui-textarea-textarea"
    placeholder="input something"
    rows="3"
  />
  <div
    class="c-gic52x soui-textarea-wrapper-padding-box cc2c8sh soui-textarea-footer"
  >
    <div
      style="text-align: end;"
    >
      <span>
        0
      </span>
       / 20
    </div>
  </div>
</div>
`;

exports[`Textarea[Base] should render correctly about info 1`] = `
<div
  class="c-ejcolv soui-textarea-wrapper"
  data-soui-input-border="true"
>
  <textarea
    class="c-gic52x soui-textarea-wrapper-padding-box c6525mi soui-textarea-wrapper-inner-title-bottom c-6oul40 soui-textarea-textarea"
    placeholder="input something"
    rows="4"
  />
</div>
`;

exports[`Textarea[Base] should render correctly about info by function 1`] = `
<div
  class="c-ejcolv soui-textarea-wrapper"
  data-soui-input-border="true"
>
  <textarea
    class="c-gic52x soui-textarea-wrapper-padding-box c6525mi soui-textarea-wrapper-inner-title-bottom c-6oul40 soui-textarea-textarea"
    placeholder="input something"
    rows="4"
  />
</div>
`;

exports[`Textarea[Base] should render correctly about size 1`] = `
<div>
  <div
    class="c-ejcolv soui-textarea-wrapper cbxwioq soui-textarea-wrapper-small"
    data-soui-input-border="true"
    style="width: 120px; margin-inline-end: 24px;"
  >
    <textarea
      class="c-gic52x soui-textarea-wrapper-padding-box c6525mi soui-textarea-wrapper-inner-title-bottom c-6oul40 soui-textarea-textarea"
      placeholder="small size"
      rows="3"
    />
  </div>
  <div
    class="c-ejcolv soui-textarea-wrapper"
    data-soui-input-border="true"
    style="width: 120px; margin-inline-end: 24px;"
  >
    <textarea
      class="c-gic52x soui-textarea-wrapper-padding-box c6525mi soui-textarea-wrapper-inner-title-bottom c-6oul40 soui-textarea-textarea"
      placeholder="default size"
      rows="3"
    />
  </div>
  <div
    class="c-ejcolv soui-textarea-wrapper cbtun66 soui-textarea-wrapper-large"
    data-soui-input-border="true"
    style="width: 120px; margin-inline-end: 24px;"
  >
    <textarea
      class="c-gic52x soui-textarea-wrapper-padding-box c6525mi soui-textarea-wrapper-inner-title-bottom c-6oul40 soui-textarea-textarea"
      placeholder="large size"
      rows="3"
    />
  </div>
</div>
`;
